added auth to swagger
